Add more variables to env.example

--- a/env.example
+++ b/env.example
@@ -1,3 +1,6 @@
+# Database
+DB_URL = sqlite:///./db.sqlite
+
 # ThingsBoard Settings
 THINGSBOARD_URL=http://localhost:8080
 THINGSBOARD_USERNAME=your@tb.com
