Save observation in db, cancel datake job, get forecast from weather srv

--- a/env.example
+++ b/env.example
@@ -1,16 +1,25 @@
 # Database
-DB_URL = sqlite:///./db.sqlite
+DB_URL=sqlite:///./db.sqlite
 
 # ThingsBoard Settings
 THINGSBOARD_URL=http://localhost:8080
 THINGSBOARD_USERNAME=your@tb.com
 THINGSBOARD_PASSWORD=your_password
 
+
+# Datacake
+DATACAKE_URL=https://api.datacake.co/graphql/
+DATACAKE_API_KEY=76944ecca787515dc49ddf808b0b4f227b0b9ceb
+
 # Farm calendar endpoint
 FARM_CALENDAR_URL=https://external.service/api/v1
 FC_USERNAME=name
 FC_PASSWORD=name!
 
+# Weather service endpoint
+WEATHER_SERVICE_URL=http://localhost:8004
+
+COMPOST_OPERATION_ID=id1-id2
 PH_ACTIVITY_TYPE_ID=000000
 TEMP_ACTIVITY_TYPE_ID=100000
 HUMIDITY_ACTIVITY_TYPE_ID=200000
